syntax = "proto3";
package bitid.id;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "bitid/id/params.proto";

option go_package = "github.com/SamuelReeder/BitID/x/id/types";

// GenesisState defines the id module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}
